--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ flask==2.3.3
 flask-cors==4.0.0
 openai==1.65.5
 numpy==2.2.4
+Flask-SQLAlchemy>=3.1.0
+Flask-Migrate>=4.0.0
+psycopg2-binary>=2.9.0
+python-dotenv>=1.0.0
